# logging

./: .gitignore  README.md  example-entry.json  fluent-bit.conf  go.work  go.work.sum  tempo.yaml  vector.yaml
apps/: compose.yml
apps/feeder/: Dockerfile  go.mod  go.sum  main.go
apps/statistics/: .dockerignore  .gitignore  Dockerfile  build.gradle.kts  settings.gradle.kts
apps/statistics/src/main/kotlin/com/github/kam1sh/statistics/: Main.kt
apps/statistics/src/main/resources/: application.conf  logback.xml
apps/storage/: Dockerfile  pyproject.toml
apps/storage/storage/: __init__.py
compose/: apps.yml  elastic.yml  grafana.yml
logging/: elastic.md  loki.md
logging/fluent-bit/: elastic.yaml  loki.yaml  parser.conf
logging/loki/: compose.yml  config.yaml
logging/vector/: dummy.yaml  elastic.yaml  loki.yaml
testing/: pyproject.toml  pytest.ini
testing/o11y_tests/: container.py  fluentbit.py  vector.py
testing/tests/: test_elastic.py  test_loki.py
