[tool.poetry]
name = "o11y-tests"
version = "0.1.0"
description = ""
authors = ["Igor Ovsyannikov <kamish@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pytest-testinfra = "^10.0.0"
psutil = "^5.9.6"
pytest-asyncio = "^0.23.0"
jc = "^1.23.6"
elasticsearch = "^8.11.0"
pytest-benchmark = "^4.0.0"
elasticsearch-dsl = "^8.11.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
